--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
   <footer>
     <div class="container">
-      © <span id="year"></span> AeroCielo · Todos los derechos reservados
+      © <span id="year"></span> AeroCielo · Todos los derechos reservados a Joaquin Gatica
     </div>
   </footer>
 
